# ml_plugin

./: .gitignore  CMakeLists.txt
org.sv.gui.qt.ml/: CMakeLists.txt  files.cmake  manifest_headers.cmake  plugin.xml  rename.sh
org.sv.gui.qt.ml/src/internal/: Makefile  layers.py  segment2d.py  svMLContourGroupCreate.cxx  svMLContourGroupCreate.h  svMLContourGroupCreate.ui  svMLContourGroupCreateAction.cxx  svMLContourGroupCreateAction.h  svMLContourGroupPoint2DSizeAction.cxx  svMLContourGroupPoint2DSizeAction.h  svMLContourGroupPoint3DSizeAction.cxx  svMLContourGroupPoint3DSizeAction.h  svMLLevelSet2DWidget.cxx  svMLLevelSet2DWidget.h  svMLLevelSet2DWidget.ui  svMLLoftParamWidget.cxx  svMLLoftParamWidget.h  svMLLoftParamWidget.ui  svMLLoftingUtils.cxx  svMLLoftingUtils.h  svMLNN2D.cxx  svMLNN2D.h  svMLSeg2DEdit.cxx  svMLSeg2DEdit.h  svMLSeg2DEdit.ui  svMLSeg3DCreateAction.cxx  svMLSeg3DCreateAction.h  svMLSeg3DEdit.cxx  svMLSeg3DEdit.h  svMLSeg3DEdit.ui  svMLSegmentationLegacyLoadAction.cxx  svMLSegmentationLegacyLoadAction.h  svMLSegmentationLegacySaveAction.cxx  svMLSegmentationLegacySaveAction.h  svMLSegmentationLoadAction.cxx  svMLSegmentationLoadAction.h  svMLSegmentationPluginActivator.cxx  svMLSegmentationPluginActivator.h  util.py
org.sv.gui.qt.ml/src/python/: SETUP.py  layers.py  segment2d.py  util.py
org.sv.gui.qt.ml/src/python/dl_template/config/: case1.yaml  case1_loft.yaml  case1_perturb15.yaml  example.yaml  global.yaml  i2i_window.yaml  local_max.yaml
org.sv.gui.qt.ml/src/python/dl_template/experiments/: I2INet.py  example_experiment.py
org.sv.gui.qt.ml/src/python/dl_template/modules/: io.py  layers.py  train_utils.py  vascular_data.py
