project(org_sv_gui_qt_ml)

set(lib org_sv_gui_qt_ml)

if(SV_USE_MITK_CONFIG)
  mitk_create_plugin(
    EXPORT_DIRECTIVE SV_QT_ML
    EXPORTED_INCLUDE_SUFFIXES src
    MODULE_DEPENDS MitkQtWidgets ${SV_LIB_MODULE_PATH_NAME} ${SV_LIB_MODULE_SEGMENTATION_NAME} ${SV_LIB_MODULE_COMMON_NAME} ${SV_LIB_MODULE_MODEL_NAME} ${SV_LIB_MODULE_QTWIDGETS_NAME} ${SV_LIB_MODULE_PROJECTMANAGEMENT_NAME} ${SV_LIB_GEOM_NAME}
  )
else()
  simvascular_create_plugin(
    EXPORT_DIRECTIVE SV_QT_ML
    MODULE_DEPENDS MitkQtWidgets ${SV_LIB_MODULE_PATH_NAME} ${SV_LIB_MODULE_SEGMENTATION_NAME} ${SV_LIB_MODULE_COMMON_NAME} ${SV_LIB_MODULE_MODEL_NAME} ${SV_LIB_MODULE_QTWIDGETS_NAME} ${SV_LIB_MODULE_PROJECTMANAGEMENT_NAME} ${SV_LIB_GEOM_NAME}
  )
endif()

if(SV_INSTALL_LIBS)
    install(TARGETS ${lib}
        RUNTIME DESTINATION ${SV_INSTALL_RUNTIME_DIR}/plugins COMPONENT CoreExecutables
        LIBRARY DESTINATION ${SV_INSTALL_LIBRARY_DIR}/plugins COMPONENT CoreLibraries
        ARCHIVE DESTINATION ${SV_INSTALL_ARCHIVE_DIR}/plugins COMPONENT CoreLibraries
    )
endif()
foreach(so ${SimVascular_LIBRARIES})
  message(WARNING ${so})
  target_link_libraries(${lib} PRIVATE ${so})
endforeach()
